--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,36 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title>Piosenki</title>
-    </head>
-    <body>
-        <h1>Piosenki biorące udział w Muzycznych Bitwach</h1>
-        <table>
-            <tr>
-                <th>Id</th>
-                <th>Wykonawca</th>
-                <th>Piosenka</th>
-                <th>Link</th>
-                <th></th>
-            </tr>
+{% extends "base.html" %}
 
-            {% for song in songs %}
-            <tr>
-                <td>{{ song.id }}</td>
-                <td>{{ song.artist }}</td>
-                <td>{{ song.song }}</td>
-                {% if song.link %}
-                <td>[<a href="{{ song.link }}">Link</a>]</td>
-                {% endif %}
-                <td>[<a href="{{ url_for('show_song', id = song.id) }}">Edytuj</a>]</td>
-            </tr>
-            {% endfor %}
-        </table>
+{% block title %}Piosenki{% endblock %}
 
-        <div id="songs-control">
-            <a href="{{ url_for('new_song') }}">Dodaj piosenkę</a>
-        </div>
-    </body>
-</html>
+{% block content %}
+<table>
+    <tr>
+        <th>Id</th>
+        <th>Wykonawca</th>
+        <th>Piosenka</th>
+        <th>Link</th>
+        <th></th>
+    </tr>
+
+    {% for song in songs %}
+    <tr>
+        <td>{{ song.id }}</td>
+        <td>{{ song.artist }}</td>
+        <td>{{ song.song }}</td>
+        {% if song.link %}
+        <td>[<a href="{{ song.link }}">Link</a>]</td>
+        {% endif %}
+        <td>[<a href="{{ url_for('read_song', song_id = song.id) }}">Pokaż</a>]</td>
+    </tr>
+    {% endfor %}
+</table>
+
+{% if show_controls %}
+<div id="songs-controls">
+    <a href="{{ url_for('create_song_form') }}">Dodaj piosenkę</a>
+</div>
+{% endif %}
+{% endblock %}
+
