--- a/templates/phase.html
+++ b/templates/phase.html
@@ -6,5 +6,6 @@
 <ul>
     <li><a href="{{ url_for('read_phase_songs', phase_id = phase.id) }}">Piosenki</a></li>
     <li><a href="{{ url_for('read_phase_battles', phase_id = phase.id) }}">Bitwy</a></li>
+    <li><a href="{{ url_for('read_phases') }}">Powrót</a></li>
 </ul>
 {% endblock %}
