--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,7 @@
 
 {% block title %}Muzyczne Bitwy{% endblock %}
 
-{% block content %}
-<ul>
+{% block controls %}
     <li><a href="{{ url_for('read_songs') }}">Wszystkie piosenki</a></li>
     <li><a href="{{ url_for('read_phases') }}">Fazy Bitew</a></li>
-</ul>
 {% endblock %}
