--- a/templates/phase/phase.html
+++ b/templates/phase/phase.html
@@ -2,10 +2,9 @@
 
 {% block title %}Faza {{ phase.id }}{% endblock %}
 
-{% block content %}
-<ul>
+{% block controls %}
     <li><a href="{{ url_for('read_phase_songs', phase_id = phase.id) }}">Piosenki</a></li>
     <li><a href="{{ url_for('read_phase_battles', phase_id = phase.id) }}">Bitwy</a></li>
     <li><a href="{{ url_for('read_phases') }}">Powrót</a></li>
-</ul>
 {% endblock %}
+
