--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,22 @@
                 </div>
                 <div class="col-md-10 col-md-offset-2">
                     <h1>{{ self.title() }}</h1>
+
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    <div>
+                        {% for category, message in messages %}
+                        <div class="alert alert-dismissable alert-{{ category }}" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            {{ message }}
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% endwith %}
+
                     {% block content %}
                     {% endblock %}
                 </div>
