--- a/templates/battle/finish_battle.html
+++ b/templates/battle/finish_battle.html
@@ -9,10 +9,9 @@
         <label class="col-md-2 control-label" for="songs">Wybierz 2 piosenki:</label>
         <div class="col-md-10">
             <select class="form-control" name="songs" id="songs" multiple>
-                <option value="{{ battle.song1_id }}">{{ macros.render_song(battle.song1, with_number = True) }}</option>
-                <option value="{{ battle.song2_id }}">{{ macros.render_song(battle.song2, with_number = True) }}</option>
-                <option value="{{ battle.song3_id }}">{{ macros.render_song(battle.song3, with_number = True) }}</option>
-                <option value="{{ battle.song4_id }}">{{ macros.render_song(battle.song4, with_number = True) }}</option>
+                {% for song in battle.songs %}
+                <option value="{{ song.id }}">{{ macros.render_song(song, with_number = True) }}</option>
+                {% endfor %}
             </select>
         </div>
     </div>
