Refactored application structure. Now using Blueprints

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
-                <a href="{{ url_for('index') }}" class="navbar-brand">Muzyczne Bitwy</a>
+                <a href="{{ url_for('index.home') }}" class="navbar-brand">Muzyczne Bitwy</a>
             </div>
         </nav>
 
