--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block title %}Muzyczne Bitwy{% endblock %}
 
 {% block controls %}
-    <li><a href="{{ url_for('read_songs') }}">Wszystkie piosenki</a></li>
-    <li><a href="{{ url_for('read_phases') }}">Fazy Bitew</a></li>
+    <li><a href="{{ url_for('songs.read_songs') }}">Wszystkie piosenki</a></li>
+    <li><a href="{{ url_for('phases.read_phases') }}">Fazy Bitew</a></li>
 {% endblock %}
