--- a/templates/phase/phase.html
+++ b/templates/phase/phase.html
@@ -3,8 +3,8 @@
 {% block title %}Faza {{ phase.id }}{% endblock %}
 
 {% block controls %}
-    <li><a href="{{ url_for('read_phase_songs', phase_id = phase.id) }}">Piosenki</a></li>
-    <li><a href="{{ url_for('read_phase_battles', phase_id = phase.id) }}">Bitwy</a></li>
-    <li><a href="{{ url_for('read_phases') }}">Powrót</a></li>
+    <li><a href="{{ url_for('phases.read_phase_songs', phase_id = phase.id) }}">Piosenki</a></li>
+    <li><a href="{{ url_for('phases.read_phase_battles', phase_id = phase.id) }}">Bitwy</a></li>
+    <li><a href="{{ url_for('phases.read_phases') }}">Powrót</a></li>
 {% endblock %}
 
