--- a/templates/song/new_song.html
+++ b/templates/song/new_song.html
@@ -3,7 +3,7 @@
 {% block title %}Dodaj piosenkę{% endblock %}
 
 {% block content %}
-<form action="{{ url_for('create_song') }}" method="post" accept-charset="utf-8" class="form-horizontal">
+<form action="{{ url_for('songs.create_song') }}" method="post" accept-charset="utf-8" class="form-horizontal">
     <div class="form-group">
         <label class="col-md-2 control-label" for="artist">Artysta:</label>
         <div class="col-md-10">
@@ -32,5 +32,5 @@
 {% endblock %}
 
 {% block controls %}
-    <li><a href="{{ url_for('read_songs') }}">Powrót</a></li>
+    <li><a href="{{ url_for('songs.read_songs') }}">Powrót</a></li>
 {% endblock %}
