--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,4 +1,4 @@
-{% macro render_song(song, with_number = False, with_link = False) -%}
-{% if with_number %}{{ song.id }}. {% endif %}{{ song.artist }} - {{ song.song }}{% if with_link and song.link %} [[url={{ song.link }}]link[/url]]{% endif %}
+{% macro render_song(song, with_number = False, with_link = False, dont_escape = False) -%}
+{% if with_number %}{{ song.id }}. {% endif %}{% if dont_escape %}{{ song.artist|safe }}{% else %}{{ song.artist }}{% endif %} - {% if dont_escape %}{{ song.song|safe }}{% else %}{{ song.song }}{% endif %}{% if with_link and song.link %}[[url={% if dont_escape %}{{ song.link|safe }}{% else %}{{ song.link }}{% endif %}]link[/url]]{% endif %}
 {%- endmacro %}
 
